--- a/img/venia/css/style.css
+++ b/img/venia/css/style.css
@@ -35,7 +35,7 @@ footer div ul li span i:hover {transform: scale(1.3);}
     header {position: sticky; top: 0; z-index: 999; justify-content: space-between;}
     header nav {display: none;}
     .container {padding:110px 16px 50px 16px; gap:10px;}
-    .container div {width:32%; padding:16px;}
+    .container div {width:32%; padding:16px; display: flex; flex-direction: column; justify-content: center;}
     .container div h2 {font-size: 12px; line-height: 16px;}
     .container div p {font-size: 12px;}
     .container div img {width: 100%; max-height: 130px;}
@@ -50,7 +50,7 @@ footer div ul li span i:hover {transform: scale(1.3);}
     .iconToggle i.CloseIcon {display:none;}
     .iconToggle.active i.menuIcon {display:none;}
     .iconToggle.active i.CloseIcon {display:inline-block;}
-    .iconToggle.active ~ nav {display: block; position: fixed; top:51px; height: calc(100vh - 51px); left:0px; width:100%; background:rgb(79 100 207); border-top:solid 1px #788eff;}
+    .iconToggle.active ~ nav {display: block; position: fixed; top:46px; height: calc(100vh - 40px); left:0px; width:100%; background:rgb(79 100 207); border-top:solid 1px #788eff;}
     .iconToggle.active ~ nav ul li {width: 100%;}
     header nav ul li a:hover,header nav ul li a:active,header nav ul li a:focus { border-bottom: solid 4px #4f64cf; background-color:transparent;}
 }
