--- a/img/venia/css/style.css
+++ b/img/venia/css/style.css
@@ -30,6 +30,15 @@ footer div ul li span i {transition: 0.3s;}
 footer div ul li span i:hover {transform: scale(1.3);}
 .iconToggle {display: none;}
 
+.loader {position: fixed; top:0; left: 0; width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; background-color:#fff; transition: opacity 0.75s visibility 0.75s; z-index: 999;}
+.loader-hidden {opacity: 0; visibility: hidden;}
+.loader::after {content:''; width: 75px; height: 75px; border:15px solid #ddd; border-top-color: blue; border-radius: 50%; animation:loading 0.75s ease infinite;}
+
+@keyframes loading {
+    from {transform:rotate(0turn);}
+    to {transform:rotate(1turn);}
+}
+
 
 @media(max-width:768px) {
     header {position: sticky; top: 0; z-index: 999; justify-content: space-between;}
