--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html {scroll-behavior: smooth;}
 * {margin:0px; padding:0px; box-sizing: border-box; font-family: 'poppins', sans-serif;}
-body {color: #ededed; background-color: #081b29;}
+body {color: #ededed; background-color: #081b29; overflow-x: hidden;}
 body#themeColorMode.active {color: #000; background-color: #fff;}
 .header {position:sticky; top: 0; left: 0; width: 100%; padding: 12px 10%; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
 .logo {position: relative; font-size: 25px; color: #fff; text-decoration: none; font-weight: 600; cursor: default; opacity: 0; animation: slideRight 1s ease forwards;}
@@ -45,16 +45,18 @@ body#themeColorMode.active .about-text .hFourText {color: #333;}
 .about-text p {color: aliceblue; font-size: 20px; line-height: 1.4; margin-bottom: 4rem;}
 body#themeColorMode.active .about-text h4 {color: #000;}
 body#themeColorMode.active .about-text p {color: #000;}
-.services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom:0; background:linear-gradient(to top, #30cfd0 0%, #330867 100%);}
-body#themeColorMode.active .services {color: #fff; background: #fff;}
-body#themeColorMode.active .services .sub-title {color: #000;}
+.services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom:0; background:linear-gradient(to top, #000000 0%, #180033 100%);}
+body#themeColorMode.active .services {color: #fff; background: #111;}
+body#themeColorMode.active .services .sub-title {color: #fff;}
 body#themeColorMode.active .sub-title span {color: #0585e5;}
 .services .sub-title {text-align: center; font-size: 60px; padding:0px;}
 .services .sub-title span {color: #0ef;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
-.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
-body#themeColorMode.active .services .services-list div {background-color: #828282; box-shadow: unset;}
+.services .services-list div {background-color: #111; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; position: relative;}
+.services .services-list div::before {content: ''; background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000); position: absolute; top:-2px; left:-2px; -webkit-background-size:400%; background-size: 400%; z-index: -1; filter: blur(5px); width: calc(100% + 4px); height: calc(100% + 4px); animation: animateBorder 20s linear infinite; opacity:1; transition: opacity .3s ease; border-radius: 20px;}
+.services .services-list div::after {z-index: -1; content: ''; position: absolute; width: 100%; height: 100%; background: #111; left: 0; top: 0; border-radius: 20px;}
+body#themeColorMode.active .services .services-list div {background-color: #111; box-shadow: unset;}
 .services .services-list div span i {font-size: 50px; margin-bottom: 30px;}
 .services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
@@ -63,7 +65,7 @@ body#themeColorMode.active .services .services-list div {background-color: #8282
 .services .services-list div a.read:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0  200px cyan;}
 body#themeColorMode.active .services .services-list div a.read {background: #fff; color: #0585e5; box-shadow: 0 0 5px #0585e5, 0 0 25px #0585e5;} 
 body#themeColorMode.active .services .services-list div a.read:hover {box-shadow: 0 0 5px #0585e5, 0 0 25px #0585e5, 0 0 50px #0585e5, 0 0 100px #0585e5, 0 0  200px #0585e5;}
-.services .services-list div:hover {transform: translateY(-10px); animation:1s ease forwards;}
+.services .services-list div:hover {transform:scale(1.05); animation:1s ease forwards;}
 .skill {padding:60px 0px 40px 0px;}
 .skill .skillContainer {display: flex; justify-content: center;}
 .skill .sub-title {text-align: center; font-size: 60px; padding:30px 0px 20px 0px;}
@@ -243,6 +245,12 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
     100% {transform: translateX(0px); opacity: 1;}
 }
 
+@keyframes animateBorder {
+    0% {background-position: 0 0;}
+    50% {background-position: 400% 0;}
+    100% {background-position: 0 0;}
+}
+
 @media(max-width:780px) {
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
@@ -289,4 +297,5 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
   .m-view-social-icons a i.fa-solid.fa-phone {font-size:17px;}
   .whatsAppChat {display: none;}
   body {padding-bottom: 54px;}
+  .services .services-list div::before {opacity: 1;}
 }
