Fix some resposnive UI issues

--- a/Dr-gauhar-azad/css/style.css
+++ b/Dr-gauhar-azad/css/style.css
@@ -5,7 +5,7 @@
 .carousel .carousel-inner img {height:80%; width:auto !important; position:absolute; right: 24px; bottom: 0px;}
 .carousel .carousel-inner .carousel-item {height: 100% !important; background-image: url(../img/bg-img.png); background-repeat: no-repeat; background-size:contain;}
 .carousel .carousel-inner .carousel-item::before {content: ''; position: absolute; width: 100%; height: 100%; background-color: #000; opacity:0.7;}
-.carousel .carousel-inner h2 {color: #fff; position: absolute; top:42%; left:30%; transform: translate(-50%, -50%);}
+.carousel .carousel-inner h2 {color:darkseagreen; position: absolute; top:50%; left:38%; transform: translate(-50%, -50%); text-transform:uppercase;}
 .about-section {background: #D0E8C5;}
 .about-section img {width:500px; height: auto; border-radius:25% 0px 25% 0px;}
 .services {background: #F3F3E0;}
@@ -31,14 +31,13 @@
 .book-appointment .form-container form .row .col-sm-6 { margin-bottom:24px;}
 footer {background-color:darkslateblue; color:#fff;}
 .mr-b-0 {margin-bottom: 0px;} .fs14 {font-size:14px;} .fs16 {font-size: 16px;} .bg-darkcyan {background-color:darkcyan;}
-
+.m-view-social-icons {display: none;}
 
 @media(max-width:780px) {
     .carousel .carousel-inner img {width:100% !important; right: 0px;}
-    .carousel .carousel-inner h2 {background:rgba(0, 0, 0, 0.8); padding:18px;}
     .navbar-nav .nav-item a.book-appointment {position: relative; left: 16px; right: auto; margin-bottom: 20px;}
     .about-section img {width: 100%;} 
-    .carousel .carousel-inner h2 {top:auto; bottom: 0px; left: 50%; text-align: center;}
+    .carousel .carousel-inner h2 {width: 100%; top:auto; bottom: 0px; left:0; text-align: center; background:rgba(0, 0, 0, 0.8); padding:18px; transform:translate(-0%, -50%);}
     .book-appointment .book-appointment-img {height: 380px;}
     .book-appointment {padding:8px;}
     .book-appointment .form-container {left:100px; top:120px;}
@@ -46,4 +45,9 @@ footer {background-color:darkslateblue; color:#fff;}
     .book-appointment .form-container form .row .col-sm-6 { margin-bottom:16px;}
     .services .custom-container .box {margin:0px;}
     .carousel .carousel-inner .carousel-item {background-size: cover;}
+    .m-view-social-icons {display: flex; justify-content: center; position: fixed; bottom: 0px; left: 0px; width: 100%; background:dodgerblue; z-index:9;}
+  .m-view-social-icons a {color: #fff; font-size:20px; display: inline-block; padding:8px 16px; text-decoration: none; text-align: center;}
+  .m-view-social-icons a .icon-text {display:block; font-size:12px; padding-top:2px;}
+  .m-view-social-icons a i.fa-solid.fa-phone {font-size:17px;}
+  .m-view-hidden {display: none;}
 }
