--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body#themeColorMode.active {color: #000; background-color: #fff;}
 .navbar a:hover {color: #0ef; border:solid 1px #0ef; border-radius: 4px; transition: 1s ease;}
 .header button.themeColorBtn {background: #00eeff; padding:5px 10px; border-radius: 4px; border: none; font-size: 20px; transition: 0.5s; position: absolute; top:13px; right:16px; cursor: pointer;}
 .header button.themeColorBtn .mode-text {font-size:12px; text-transform: uppercase; position: relative; top: -3px;}
+.bold {font-weight:600;}
 body#themeColorMode .header button span.light {display: none;}
 body#themeColorMode .header button span.dark {display: inline-block;}
 body#themeColorMode.active .header button span.light {display: inline-block;}
@@ -28,7 +29,7 @@ body#themeColorMode.active .home-sci a {border:solid 2px #0585e5; color: #0585e5
 .home-sci a:hover {background: #0ef; color: #081b29; box-shadow: 0 0 20px #0ef;}
 body#themeColorMode.active .home-sci a:hover {background:#0585e5; box-shadow:none; color: #fff;}
 body#themeColorMode.active .home {background-color: #fff;}
-.btn-box {display: inline-block; padding: 12px 28px; background:#000; border-radius: 40px; border: 1px solid #0ef; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
+.btn-box {display:inline-block; padding: 12px 28px; background:#000; border-radius: 40px; margin-top:16px; border: 1px solid #0ef; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .btn-box:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 100px cyan, 0 0 200px cyan; background: #0ef; color: #000;}
 body#themeColorMode.active .btn-box {background:#fff; border: 1px solid #0585e5; color: #0585e5; box-shadow: none;}
 body#themeColorMode.active .btn-box:hover {box-shadow: 0 0 5px #0585e5, 0 0 25px #0585e5 0 0 100px #0585e5, 0 0 200px #0585e5; background: #0585e5; color: #fff;}
@@ -42,7 +43,9 @@ body#themeColorMode.active .about {background-color:#ececec;}
 body#themeColorMode.active .about-text h2 span {color:#0585e5}
 .about-text .hFourText {font-size: 29px; font-weight: 600; color: #fff; line-height: 1.7; margin: 15px 0 30px;}
 body#themeColorMode.active .about-text .hFourText {color: #333;}
-.about-text p {color: aliceblue; font-size: 20px; line-height: 1.4; margin-bottom: 4rem;}
+.about-text p {color: aliceblue; font-size:14px; line-height:20px; margin-bottom:16px;}
+.about-text p.mr-b-8 {margin-bottom:8px;}
+.about-text h3 {margin-top:24px; margin-bottom:8px; font-size:18px;}
 body#themeColorMode.active .about-text h4 {color: #000;}
 body#themeColorMode.active .about-text p {color: #000;}
 .services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom:0; background:linear-gradient(to top, #000000 0%, #180033 100%);}
@@ -54,7 +57,7 @@ body#themeColorMode.active .sub-title span {color: #0585e5;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
 .services .services-list div {background-color: #111; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; position: relative;}
-.services .services-list div::before {content: ''; background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000); position: absolute; top:-2px; left:-2px; -webkit-background-size:400%; background-size: 400%; z-index: -1; filter: blur(5px); width: calc(100% + 4px); height: calc(100% + 4px); animation: animateBorder 20s linear infinite; opacity:1; transition: opacity .3s ease; border-radius: 20px;}
+.services .services-list div::before {content: ''; background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000); position: absolute; top:-4px; left:-4px; -webkit-background-size:400%; background-size: 400%; z-index: -1; filter: blur(3px); width: calc(100% + 8px); height: calc(100% + 8px); animation: animateBorder 20s linear infinite; opacity:1; transition: opacity .3s ease; border-radius: 20px;}
 .services .services-list div::after {z-index: -1; content: ''; position: absolute; width: 100%; height: 100%; background: #111; left: 0; top: 0; border-radius: 20px;}
 body#themeColorMode.active .services .services-list div {background-color: #111; box-shadow: unset;}
 .services .services-list div span i {font-size: 50px; margin-bottom: 30px;}
