--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body#themeColorMode .header button span.dark {display: inline-block;}
 body#themeColorMode.active .header button span.light {display: inline-block;}
 body#themeColorMode.active .header button span.dark {display: none;}
 body#themeColorMode.active .header button.themeColorBtn {background-color: #fff; color: #000;}
-.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 5% 0; justify-content: space-between; height: 100vh; background-color: #000;  transition: 0.5s;}
+.home {position:relative; width: 100%; display: flex; align-items: center; padding:50px 5% 0; justify-content: space-between; height: 100vh; background-color: #000;  transition: 0.5s;}
 .home .profile-pic {display: inline-flex; justify-content: center;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
@@ -27,6 +27,7 @@ body#themeColorMode.active .home-content .hText span {color:#0585e5;}
 .home-sci a {display: inline-flex; justify-content: center; align-items: center; width: 40px; height:40px; background:transparent; border:solid 2px #0ef; border-radius: 50%; font-size: 20px; color: #0ef; text-decoration: none; margin: 30px 15px 30px 0px; transition: .5s ease; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay:calc(.2s * var(--i));}
 body#themeColorMode.active .home-sci a {border:solid 2px #0585e5; color: #0585e5;}
 .home-sci a:hover {background: #0ef; color: #081b29; box-shadow: 0 0 20px #0ef;}
+.home #dotsCanvas {position:absolute; top:0; left:0; width:100%; height:100%; background:transparent; pointer-events: none;}
 body#themeColorMode.active .home-sci a:hover {background:#0585e5; box-shadow:none; color: #fff;}
 body#themeColorMode.active .home {background-color: #fff;}
 .btn-box {display:inline-block; padding: 12px 28px; background:#000; border-radius: 40px; margin-top:16px; border: 1px solid #0ef; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
@@ -301,4 +302,5 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
   .whatsAppChat {display: none;}
   body {padding-bottom: 54px;}
   .services .services-list div::before {opacity: 1;}
+  .home #dotsCanvas {display: none;}
 }
