--- a/css/styles.css
+++ b/css/styles.css
@@ -57,12 +57,13 @@ body#themeColorMode.active .sub-title span {color: #0585e5;}
 .services .sub-title span {color: #0ef;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
-.services .services-list div {background-color: #111; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; position: relative;}
+.services .services-list div {background-color: #111; padding:24px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; position: relative;}
 .services .services-list div::before {content: ''; background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000); position: absolute; top:-4px; left:-4px; -webkit-background-size:400%; background-size: 400%; z-index: -1; filter: blur(3px); width: calc(100% + 8px); height: calc(100% + 8px); animation: animateBorder 20s linear infinite; opacity:1; transition: opacity .3s ease; border-radius: 20px;}
 .services .services-list div::after {z-index: -1; content: ''; position: absolute; width: 100%; height: 100%; background: #111; left: 0; top: 0; border-radius: 20px;}
 body#themeColorMode.active .services .services-list div {background-color: #111; box-shadow: unset;}
 .services .services-list div span i {font-size: 50px; margin-bottom: 30px;}
-.services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
+.services .services-list div h2 {font-size:24px; font-weight:500; margin-bottom:12px;}
+.services .services-list div h2 + p {line-height:22px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
 .services .services-list div a.read {display: inline-block; padding: 12px; background: #081b29; border-radius: 40px; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;} 
