--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ html {scroll-behavior: smooth;}
 * {margin:0px; padding:0px; box-sizing: border-box; font-family: 'poppins', sans-serif;}
 body {color: #ededed; background-color: #081b29; overflow-x: hidden;}
 body#themeColorMode.active {color: #000; background-color: #fff;}
-.header {position:sticky; top: 0; left: 0; width: 100%; padding: 12px 10%; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
+.header {position:sticky; top: 0; left: 0; width: 100%; padding:12px 10% 12px 32px; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
 .logo {position: relative; font-size: 25px; color: #fff; text-decoration: none; font-weight: 600; cursor: default; opacity: 0; animation: slideRight 1s ease forwards;}
 .navbar a {display:inline-block; font-size:14px; color: #fff; text-decoration: none; font-weight: 500; border: solid 1px #051129; margin-left:12px; padding: 8px 16px; transition: .3s; opacity: 0; animation: slideTop .5s ease forwards; animation-delay: calc(.2s * var(--i));}
 .navbar a:hover {color: #0ef; border:solid 1px #0ef; border-radius: 4px; transition: 1s ease;}
@@ -132,7 +132,7 @@ body#themeColorMode.active .main-text h2 span {color: #0585e5;}
 .company-logo {display: flex; justify-content: center; position: relative; top:200px; padding: 100px 0px;}
 .company-logo .companies-logo {background-color: #fff; padding: 32px; border-radius: 24px; display:flex; justify-content:center; align-items:center; gap:20px;}
 body#themeColorMode.active .company-logo .companies-logo {border:solid 1px #ccc;}
-.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding:60px 32px; margin-top:230px;}
+.contact {display: grid; grid-template-columns: repeat(1, 1fr); align-items: center; gap: 3rem; padding:60px 32px; margin-top:230px;}
 body#themeColorMode.active .contact { background-color:#ececec;}
 .contact-text h3 {font-size:60px; line-height: 1; text-align: center; margin:0px 0px 50px 0px;}
 .contact-text h3 span {color: #0ef;}
@@ -256,6 +256,65 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
     100% {background-position: 0 0;}
 }
 
+
+/* Blog css strat from here */
+.blog-container .blog-header .box {width:100%; height:400px; overflow:hidden; position: relative;}
+.blog-container .blog-header .box img {width:100%; height:auto;}
+.blog-container .blog-header .box .text {width:100%; height:160px; position: absolute; left: 0; bottom: 0; padding-left:32px; color: #fff; background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.8) 100%);}
+.blog-container .blog-header .box .text h1 {position: absolute; bottom:24px; font-style: italic;}
+.blog-container .blog-header .box .text h1::after {content:''; height:2px; width: 100%; display: block; margin-top:6px; background-color:#ff8b00;}
+.blog-container .blog-wrapper {display:grid; grid-template-columns:auto auto; gap: 16px; padding:32px; background:#e7e7e7;}
+body#themeColorMode.active .blog-container .blog-wrapper {background:#fff;}
+.blog-container .blog-wrapper .blog-box {width: auto; display:flex; background-color:#fff; padding:8px; border-radius:8px;}
+.blog-container .blog-wrapper .blog-box .img-contain {width:220px; height:110px; display:block; overflow:hidden; box-shadow:0px 0px 2px #a3a3a3;}
+.blog-container .blog-wrapper .blog-box .img-contain img {width: 100%; height: auto;}
+.blog-container .blog-wrapper .blog-box .text-contain {width:100%; position:relative; color: #000; padding-left: 8px;}
+.blog-container .blog-wrapper .blog-box .text-contain h2 {margin-bottom:6px; line-height:18px;}
+.blog-container .blog-wrapper .blog-box .text-contain h2 a {color:#017ec1; text-decoration:none; font-size:16px;}
+.blog-container .blog-wrapper .blog-box .text-contain h2 a:hover {text-decoration:underline;}
+.blog-container .blog-wrapper .blog-box .text-contain .txt {color: #848484; font-size:13px; text-decoration:none;}
+.blog-container .blog-wrapper .blog-box .text-contain .txt:hover {text-decoration: underline; cursor: pointer;}
+.blog-container .blog-wrapper .blog-box .text-contain .text-footer {width: 100%; position:absolute; bottom:4px;}
+.blog-container .blog-wrapper .blog-box .text-contain .text-footer .date {font-size:12px; font-weight:bold;color:#a1a1a1;}
+.blog-container .blog-wrapper .blog-box .text-contain .text-footer a.readMorebtn {background-color:#fff; border:solid 1px #dadada; border-radius:4px; padding:4px 8px; margin-left:4px; font-size:13px; color:#848484; text-decoration: none;}
+.blog-container .blog-wrapper .blog-box .text-contain .text-footer a.readMorebtn:hover {background:#0182c1; color:#fff; border:solid 1px #0182c1; cursor: pointer;}
+/* Blog css end here */
+
+/* Blog css strat from here */
+.blogs-container .blogs-header .box {width:100%; height:400px; overflow:hidden; position: relative;}
+.blogs-container .blogs-header .box img {width:100%; height:auto;}
+.blogs-container .blogs-header .box .text {width:100%; height:160px; position: absolute; left: 0; bottom: 0; padding-left:16px; color: #fff; background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.8) 100%);}
+.blogs-container .blogs-header .box .text h1 {display: inline-block; margin-top:94px; font-size: 20px;}
+.blogs-container .blogs-header .box .text h1::after {content:''; height:2px; width: 100%; display: block; margin-top:6px; background-color:#ff8b00;}
+.blogs-container .blogs-header .box .text p.date-text {display:block; margin-top:6px; font-style: italic; font-size:13px;}
+.blogs-container .blogs-wrapper {display:grid; grid-template-columns:68.5% 30%; gap:24px; padding:32px;}
+.blogs-container .blogs-wrapper .blogs-box {width: auto; display:flex; background-color:#fff; padding:8px; border:solid 2px #d8d8d8; border-radius:0px;}
+.blogs-container .blogs-wrapper .blogs-box .blogs-box-container {position: relative;}
+.blogs-container .blogs-wrapper .blogs-box .img-contain {width:220px; max-height:110px; display:block; overflow:hidden;}
+.blogs-container .blogs-wrapper .blogs-box .img-contain img {width: 100%; height: auto; min-height: 110px;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain {width:100%; position:relative; color: #000; padding:4px 8px;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h2.blog-heading {font-size:20px; color:#333; margin-top:8px; margin-bottom:14px;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain p.blog-pragraph-text {font-size:14px; line-height:24px; margin-bottom: 16px; color:#555;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h2 {margin-bottom:4px; line-height:16px; font-size: 16px; font-weight: bold;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h2 a {color:#017ec1; text-decoration:none; font-size:13px;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h2 a:hover {text-decoration:underline;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h3 {margin-bottom:6px; font-size:18px; line-height:24px; color:#000; font-weight:normal;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain h4 {margin-bottom:6px; font-size:18px; line-height:24px; color:#000; font-weight:normal;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .txt {color: #848484; font-size:13px; text-decoration: none;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .txt:hover {text-decoration:underline; cursor: pointer;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .text-footer {width: 100%; position:relative; top:4px;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .text-footer .date {font-size:12px; font-style:italic; color:#a1a1a1;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .text-footer a.readMorebtn {background-color:#fff; border:solid 1px #fff; padding:2px 4px; float:right; margin-right:12px; text-decoration: none; font-size:11px; color:#848484;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain .text-footer a.readMorebtn:hover {background:#0182c1; color:#fff; border:solid 1px #0182c1; cursor: pointer;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain ul {font-size:14px; line-height:24px; margin-bottom:16px; list-style: none;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain ul li {font-size:14px; line-height:24px; margin-bottom:12px; color:#555;}
+.blogs-container .blogs-wrapper .blogs-box .text-contain ul li b {color:#555;}
+.blogs-container .blogs-wrapper .blogs-box .blogs-box-container:hover .tint-bg {opacity:1;}
+.blogs-container .blogs-wrapper .blogs-box .blogs-box-container .tint-bg {opacity:0; position:absolute; top:0px; left: 0px; transition: all 0.5s; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.8);}
+.blogs-container .blogs-wrapper .blogs-box .blogs-box-container .tint-bg a.readMorebtn {background-color: #f00; cursor: pointer; padding:10px 24px; border-radius:24px; position: absolute; top: 50%; font-size: 13px; left: 50%; transform: translate(-50%, -50%);}
+.d-flex {display: flex;} .flex-dc {flex-direction: column;} .border {border: solid 1px #ccc;} .mt-12 {margin-top:12px;} .mb-16 {margin-bottom:16px;} .b-shadow {box-shadow:0px 0px 7px #bebebe}
+/* Blog css end here */
+
 @media(max-width:780px) {
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
@@ -304,4 +363,9 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
   body {padding-bottom: 54px;}
   .services .services-list div::before {opacity: 1;}
   .home #dotsCanvas {display: none;}
+
+  .blog-container .blog-wrapper {grid-template-columns:auto;}
+  .blog-container .blog-wrapper .blog-box .img-contain {box-shadow: none;}
+  .blog-container .blog-wrapper .blog-box .text-contain {padding-bottom:32px;}
+  .blogs-container .blogs-wrapper {grid-template-columns:100%;}
 }
