--- a/css/styles.css
+++ b/css/styles.css
@@ -315,6 +315,11 @@ body#themeColorMode.active .blog-container .blog-wrapper {background:#fff;}
 .d-flex {display: flex;} .flex-dc {flex-direction: column;} .border {border: solid 1px #ccc;} .mt-12 {margin-top:12px;} .mb-16 {margin-bottom:16px;} .b-shadow {box-shadow:0px 0px 7px #bebebe}
 /* Blog css end here */
 
+.social-share-container {position: absolute; top:8px; right:8px; text-align: center; border-radius: 4px; padding:4px;  background: #fff;}
+.social-share-container a {font-size: 36px; display: block;}
+.toast {position: fixed; bottom: 40px; left:50%; transform: translate(-50%, 100px); background: #000; color: #fff; font-size: 16px; padding:12px 16px; border-radius:4px; z-index: 999; opacity:0; transition: all 300ms ease;}
+.toast.active {opacity: 1; transform: translate(-50%, 0);}
+
 @media(max-width:780px) {
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
