--- a/css/styles.css
+++ b/css/styles.css
@@ -317,8 +317,7 @@ body#themeColorMode.active .blog-container .blog-wrapper {background:#fff;}
 
 .social-share-container {position: absolute; top:8px; right:8px; text-align: center; border-radius: 4px; padding:4px;  background: #fff;}
 .social-share-container a {font-size: 36px; display: block;}
-.toast {position: fixed; bottom: 40px; left:50%; transform: translate(-50%, 100px); background: #000; color: #fff; font-size: 16px; padding:12px 16px; border-radius:4px; z-index: 999; opacity:0; transition: all 300ms ease;}
-.toast.active {opacity: 1; transform: translate(-50%, 0);}
+.message {margin-top: 10px; font-size: 14px; color: #333;}
 
 @media(max-width:780px) {
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
